--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   "dependencies": {
     "alt": "^0.17.8",
     "async": "^1.5.0",
+    "cookie-parser": "^1.4.1",
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
+    "ejs": "^2.4.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "history": "^1.13.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
