--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
+    "passport-authtkt": "^0.0.2",
     "history": "^1.13.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
