--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "postinstall": "bower install && gulp build"
+    "postinstall": "bower install"
   },
   "babel": {
     "presets": ["es2015", "react"]
@@ -25,7 +25,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "passport": "^0.3.2",
-    "passport-authtkt": "^0.0.2",
+    "passport-local": "^1.0.0",
     "history": "^1.13.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
@@ -37,7 +37,8 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.15"
+    "xml2js": "^0.4.15",
+    "moment": "^2.12.0"
   },
   "devDependencies": {
     "babel-core": "^6.1.19",
