--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "postinstall": "bower install"
+    "postinstall": "bower install && gulp build"
   },
   "babel": {
     "presets": ["es2015", "react"]
