--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.1",
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
+    "classnames": "^2.2.5",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
