--- a/package.json
+++ b/package.json
@@ -13,24 +13,29 @@
     "postinstall": "bower install && gulp build"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "dependencies": {
     "alt": "^0.17.8",
     "async": "^1.5.0",
-    "cookie-parser": "^1.4.1",
     "body-parser": "^1.14.1",
-    "colors": "^1.1.2",
     "classnames": "^2.2.5",
+    "colors": "^1.1.2",
     "compression": "^1.6.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
     "history": "^1.13.0",
+    "moment": "^2.12.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^0.14.2",
+    "react-date-range": "^0.2.4",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
     "request": "^2.65.0",
@@ -38,8 +43,7 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.15",
-    "moment": "^2.12.0"
+    "xml2js": "^0.4.15"
   },
   "devDependencies": {
     "babel-core": "^6.1.19",
