--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "history": "^1.13.0",
+    "linq": "^3.0.5",
     "moment": "^2.12.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
