--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.13.0",
     "history": "^1.13.0",
     "linq": "^3.0.5",
+    "markdown-it": "^6.0.5",
     "moment": "^2.12.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
