--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^0.14.2",
+    "react-big-calendar": "^0.10.2",
     "react-date-range": "^0.2.4",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
