--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.2.5",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
