--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "colors": "^1.1.2",
     "compression": "^1.6.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.2.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
