--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "babel": {
     "presets": [
+      "stage-3",
       "es2015",
       "react"
     ]
@@ -53,11 +54,14 @@
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
-    "babel-core": "^6.1.19",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-register": "^6.3.13",
-    "babelify": "^7.2.0",
+    "babel-core": "^6.14.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-3": "^6.11.0",
+    "babel-register": "^6.14.0",
+    "babelify": "^7.3.0",
     "bower": "^1.6.5",
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
