--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.14.0",
+    "babel-runtime": "^6.11.6",
     "babelify": "^7.3.0",
     "bower": "^1.6.5",
     "browserify": "^12.0.1",
