--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.12.0",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
+    "node-fetch": "^1.6.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.3.0",
