--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.13.0",
     "history": "^1.13.0",
     "linq": "^3.0.5",
+    "lodash": "^4.16.4",
     "markdown-it": "^6.0.5",
     "moment": "^2.12.0",
     "mongoose": "^4.2.5",
@@ -51,7 +52,6 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
-    "underscore": "^1.8.3",
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
