--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
+    "fs": "^0.0.1-security",
     "history": "^1.13.0",
-    "linq": "^3.0.5",
     "lodash": "^4.16.4",
     "markdown-it": "^6.0.5",
     "moment": "^2.12.0",
