--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
-  "name": "newedenfaces",
+  "name": "workingnp",
   "dependencies": {
     "jquery": "^2.1.4",
     "bootstrap": "^3.3.5",
     "magnific-popup": "^1.0.0",
     "toastr": "^2.1.1",
-    "Sortable": "sortablejs#^1.4.2"
+    "Sortable": "sortablejs#^1.4.2",
+    "editor.md": "^1.5.0"
   }
 }
