--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "fs": "^0.0.1-security",
+    "highlight.js": "^9.9.0",
     "lodash": "^4.17.4",
     "markdown-it": "^8.2.2",
     "moment": "^2.17.1",
