--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-date-range": "^0.9.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "react-tag-input": "^4.6.2",
     "request": "^2.65.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
