--- a/package.json
+++ b/package.json
@@ -22,54 +22,49 @@
   },
   "dependencies": {
     "alt": "^0.17.8",
-    "async": "^2.1.4",
-    "body-parser": "^1.14.1",
+    "async": "^2.1.5",
+    "body-parser": "^1.17.0",
     "classnames": "^2.2.5",
     "colors": "^1.1.2",
-    "compression": "^1.6.0",
+    "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.2.1",
-    "cookie-parser": "^1.4.1",
-    "express": "^4.13.3",
-    "express-session": "^1.13.0",
-    "fs": "^0.0.1-security",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.0",
+    "express-session": "^1.15.1",
     "highlight.js": "^9.9.0",
     "lodash": "^4.17.4",
-    "markdown-it": "^8.2.2",
-    "md5": "^2.2.1",
+    "markdown-it": "^8.3.0",
     "moment": "^2.17.1",
-    "mongoose": "^4.7.7",
-    "morgan": "^1.7.0",
+    "mongoose": "^4.8.5",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-oauth2": "^1.3.0",
+    "passport-oauth2": "^1.4.0",
     "promise": "^7.1.1",
     "react": "^15.4.2",
     "react-big-calendar": "^0.12.3",
-    "react-date-range": "^0.9.2",
+    "react-date-range": "^0.9.3",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-tag-input": "^4.6.2",
     "request": "^2.65.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
-    "swig": "^1.4.2",
-    "xml2js": "^0.4.15"
+    "swig": "^1.4.2"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-3": "^6.11.0",
-    "babel-register": "^6.14.0",
-    "babel-runtime": "^6.11.6",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-3": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "babelify": "^7.3.0",
-    "bower": "^1.6.5",
-    "browserify": "^12.0.1",
+    "browserify": "^14.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
@@ -80,9 +75,10 @@
     "gulp-sourcemaps": "^2.4.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
+    "morgan": "^1.8.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0"
+    "watchify": "^3.9.0"
   },
   "license": "MIT"
 }
