--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,14 +12,14 @@
 			"preLaunchTask": null,
 			"runtimeExecutable": null,
 			"runtimeArgs": [
+				"--harmony-async-await",
 				"--nolazy"
 			],
 			"env": {
 				"NODE_ENV": "development"
 			},
 			"console": "internalConsole",
-			"sourceMaps": true,
-			"outDir": null
+			"sourceMaps": true
 		},
 		{
 			"name": "Attach",
@@ -29,7 +29,6 @@
 			"address": "localhost",
 			"restart": false,
 			"sourceMaps": false,
-			"outDir": null,
 			"localRoot": "${workspaceRoot}",
 			"remoteRoot": null
 		}
